<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvDummyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/your_realtime_reading_is"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/init_val_voltage"
        android:textColor="#225C6E"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDummyText"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tvUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/volts_keyword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/voltage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/voltage"
        app:layout_constraintTop_toBottomOf="@+id/tvDummyText"
        app:layout_constraintVertical_bias="0.768" />

    <TextView
        android:id="@+id/tvMaxMinDummyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/your_max_and_min_voltages"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voltage" />

    <TextView
        android:id="@+id/tvMinKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/min_keyword"
        android:textColor="@color/greyishWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvMaxKeyword"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxMinDummyText"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/tvMaxKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/max_keyword"
        android:textColor="@color/greyishWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvMinKeyword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxMinDummyText"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/maxVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="monospace"
        android:text="@string/init_val_voltage"
        android:textColor="@color/lightBlue"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/tvMaxKeyword"
        app:layout_constraintEnd_toStartOf="@+id/tvVoltsKeyword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxMinDummyText"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/minVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:fontFamily="monospace"
        android:text="@string/init_val_voltage"
        android:textColor="@color/lightBlue"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/tvMinKeyword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVoltsKeyword"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxMinDummyText"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/tvVoltsKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:lines="5"
        android:text="@string/volts_vertically"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxMinDummyText"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/btnToGraph"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="monospace"
        android:text="@string/show_graph"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>